# turnshock

./: README.md  hehe.py  project_struct_by_section.json  pyproject.toml  test.py
configs/: cli_start.json  parse.json
configs/bridge_assault/: heroes.json  map.json
configs/defender_vs_mage/: heroes.json  map.json
configs/epic_battle/: heroes.json  map.json
configs/forest_ambush/: heroes.json  map.json
configs/labirinth/: heroes.json  map.json
configs/swordsman_vs_archer/: heroes.json  map.json
configs/team_brawl/: heroes.json  map.json
src/adapters/: domain_adapters.py
src/adapters/pygame_renderer/: UI.md  constants.py  icons.py  input_handler.py  pygame_renderer.py
src/application/: game_generator.py
src/config/: cli_config.py  config_loader.py  logger.py  parser_options.py  settings.py
src/domain/: README_DOMAIN.md  constants.py  enums.py  errors.py  logger.py
src/domain/analytics/: analytics.md  stats.py
src/domain/core/: README.md  ability.py  action.py  board.py  core.md  effect.py  state.py  stats.py  unit.py
src/domain/engine/: README.md  ability_utils.py  applier.py  combat.py  engine.md  event_loop.py
src/domain/factory/: game_factory.py  unit_factory.py
src/domain/geometry/: pathfinding.py  position.py
src/domain/heroes/: README.md  archer_profile.py  assassin_profile.py  bard_profile.py  base_abilities.py  defender_profile.py  mage_dps_profile.py  mage_supp_profile.py  (+2 more)
src/interfaces/: cli.py
tests/: conftest.py
tests/application/: test_game_generator.py
tests/config/: test_scenarios.py
tools/: build_tree.py
(+33 files in other folders)
