[project]
name = "turnshock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "pygame>=2.6.1",
    "pytest>=8.3.5",
]

[project.scripts]
turnshock = "interfaces.cli:main"
